Miglioria: persistenza classifica — caricamento e salvataggio su file
Scoreboard: loadScores() all'avvio (crea file se mancante), parsing CSV Nome;Punteggio con log su righe malformate, writeScores() (scrittura su temp + rename), persistenza immediata dopo addOrUpdateBest(), getEntries() ritorna copia difensiva. Raccomandazioni: sincronizzazione metodi critici e uso di Files.move con ATOMIC_MOVE per atomicità.